# radar_perception

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cppcheck.cmake  cpplint.cmake  suppressions.txt
.circleci/: config.yml
.github/workflows/: cmake.yml  workflow.yml
cmake/: CodeCoverage.cmake  cppcheck.cmake  cpplint.cmake  suppressions.txt
components/: CMakeLists.txt
components/common/: CMakeLists.txt
components/common/include/: math.hpp  range_rate.hpp  value_with_covariance.hpp  velocity_profile.hpp
components/common/src/: math.cpp  range_rate.cpp
components/dealiaser/: CMakeLists.txt
components/dealiaser/include/: dealiaser.hpp
components/dealiaser/src/: dealiaser.cpp
components/detection_classifier/: CMakeLists.txt
components/detection_classifier/include/: detection_classifier.hpp
components/detection_classifier/src/: detection_classifier.cpp
components/segment_processor/: CMakeLists.txt
components/segment_processor/include/: segment_processor.hpp
components/segment_processor/src/: guardrail_range_and_shape.cpp  guardrail_range_and_shape.hpp  msac.cpp  msac.hpp  object.hpp  segment_processor.cpp
components/segmentator/: CMakeLists.txt
components/segmentator/include/: distance_matrix.hpp  segmentator.hpp
components/segmentator/src/: distance_matrix.cpp  segmentator.cpp
components/velocity_estimator/: CMakeLists.txt
components/velocity_estimator/include/: velocity_estimator.hpp
components/velocity_estimator/src/: velocity_estimator.cpp
documentation/: class_diagram.uxf
example/: CMakeLists.txt  detections.csv  example.cpp  sensors.csv
example/include/: csv_reader.hpp  detection.hpp  detections_reader.hpp  sensor_data.hpp  sensors_data_reader.hpp
example/src/: csv_reader.cpp  detections_reader.cpp  sensors_data_reader.cpp
include/: radar_processor.hpp
include/interface/: radar_processor.h  radar_scan.h  sensor_origin.h
include/io/: CMakeLists.txt  radar_detection.hpp
include/io/include/: processor_calibration.hpp
include/radar_io/: CMakeLists.txt
include/radar_io/include/: covariance.hpp  dealiaser_calibrations.hpp  dealiasing_status.hpp  guardrail.hpp  moving_object.hpp  moving_status.hpp  processor_calibration.hpp  radar_detection.hpp  radar_scan.hpp  radar_velocity.hpp  segment_processor_calibration.hpp  segmentator_calibration.hpp  sensor_origin.hpp  velocity_estimator_calibrations.hpp
src/: radar_processor.cpp
test/: CMakeLists.txt  radar_processor_test.cpp
tests/: CMakeLists.txt  dealiaser_test.cpp  detection_classifier_test.cpp  radar_processor_test.cpp  segmentator_test.cpp  segments_processor_test.cpp  velocity_estimator_test.cpp
